Cities are now loaded from server on load, cleaned up some whitespace, refactored

--- a/src/StageFly/StageFly.csproj
+++ b/src/StageFly/StageFly.csproj
@@ -56,6 +56,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CityObject.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="ScoreFixer.cs" />
     <Compile Include="StageFlyForm.cs">
